# 86Box

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_release.yml  build_release.yml  cmake_linux.yml  cmake_macos.yml  cmake_windows_msys2.yml  codeql_linux.yml  codeql_macos.yml  codeql_windows_msys2.yml  manual_full_release.yml  release_artifacts.yml  run_all_builds.yml
build-qt/: CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
build-qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-qt/src/: cmake_install.cmake
build-qt/src/cdrom/: cmake_install.cmake
build-qt/src/chipset/: cmake_install.cmake
build-qt/src/codegen_new/: cmake_install.cmake
build-qt/src/cpu/: cmake_install.cmake
build-qt/src/device/: cmake_install.cmake
build-qt/src/mac/: Info.plist  (+1 more)
cmake/: llvm-macos-aarch64.cmake
scripts/macos/: build_universal.sh
src/: 86box.c  CMakeLists.txt  config.c  device.c  monitor.c  vnc.c  vnc_keymap.c
src/cdrom/: CMakeLists.txt
src/cpu/: 386_dynarec.c  CMakeLists.txt  cpu.c  cpu.h
src/device/: mouse.c
src/disk/: CMakeLists.txt  hdc_ide.c  hdd.c  hdd_image.c  hostfat.c  hostfat.h
src/floppy/: fdc.c  fdd.c
src/machine/: machine.c  machine_table.c
src/network/: CMakeLists.txt
src/printer/: CMakeLists.txt
src/qt/: CMakeLists.txt  qt_filefield.cpp  qt_filefield.hpp  qt_harddiskdialog.cpp  qt_harddiskdialog.hpp  qt_harddrive_common.hpp  qt_machinestatus.cpp  qt_machinestatus.hpp  qt_main.cpp  qt_mainwindow.cpp  qt_mainwindow.hpp  qt_mainwindow.ui  qt_mediamenu.cpp  qt_rendererstack.cpp  qt_settings.cpp  qt_settings.hpp  qt_settingsfloppycdrom.cpp  qt_settingsfloppycdrom.ui  qt_settingsharddisks.cpp  qt_settingsharddisks.hpp  qt_settingsharddisks.ui  qt_settingshostfs.cpp  qt_settingshostfs.hpp  qt_settingshostfs.ui  qt_settingsmachine.cpp  qt_settingsmachine.hpp  qt_settingsmachine.ui
src/scsi/: scsi_disk.c
src/sound/: CMakeLists.txt  fdd_sfx.c  openal.c
src/unix/: CMakeLists.txt  macOSXGlue.h  macOSXGlue.m  sdl_main.c  sdl_monitor.c  sdl_monitor.h  unix.c
(+195 files in other folders)
